# gitagent

./: ARTICLE.md  Dockerfile  MIGRATION_GUIDE.md  README.md  action.yml  pyproject.toml
.github/action-handlers/examples/: codex-simple.yml  file-inclusion-demo.yml  gemini-simple.yml
.github/action-handlers/issues/: bug-report-processor.yml
.github/action-handlers/pull_request/: gemini-analyzer.yml  pr-reviewer.yml
.github/action-handlers/push/: ai-bug-fixer.yml  bug-report-analyzer.yml  claude-reviewer.yml  security-scanner.yml
.github/action-handlers/workflow_run/: auto-build-fixer.yml
.github/workflows/: auto-build-fixer.yml  ci.yml  docker-publish.yml  gemini-simple-analyzer.yml  pr-reviewer.yml  security-scanner.yml
examples/: MIGRATION_EXAMPLES.md  WORKFLOW_MIGRATION_SUMMARY.md  ai-bug-fixer.yml  auto-build-fixer.yml  claude-code-sdk-advanced.yml  gemini-simple-analyzer.yml  issue-processor.yml  new-format-examples.md  pr-reviewer.yml  security-scanner.yml
prompts/: README.md  ai-bug-fixer.md  auto-build-fixer.md  claude-code-sdk-advanced.md  gemini-simple-analyzer.md  issue-processor.md  pr-reviewer.md  security-scanner.md
scripts/: demo.py
src/gitagent/: __init__.py  agent_manager.py  app.py  claude_code_sdk_executor.py  config.py  event_handler.py  git_operations.py  logging_config.py  main.py  models.py
src/github_action_handler/: __init__.py  agent_manager.py  config.py  event_handler.py  logging_config.py  main.py  models.py  template_functions.py
